# hellcall-desktop

./: .gitignore  LICENSE  README.md  compile_errors.txt  index.html  package.json
.github/workflows/: build-release.yml
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/: README_zh.md
src/: i18n.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hellcall.rs  lib.rs  main.rs  stratagems.rs  utils.rs  vosk_model_manager.rs
src-tauri/src/ai/: client.rs  mod.rs  session_store.rs  sherpa.rs  types.rs
src-tauri/src/asset_manager/: asset_downloader.rs  mod.rs  sherpa_model_manager.rs  sherpa_runtime_manager.rs  vision_model_manager.rs  vosk_model_manager.rs
src-tauri/src/hellcall/: config.rs
src-tauri/src/hellcall/core/: audio.rs  command.rs  keypress.rs  microphone.rs  mod.rs  speaker.rs  vision.rs
src-tauri/src/hellcall/core/matcher/: levenshtein.rs  mod.rs
src-tauri/src/hellcall/core/vision/: capture.rs  corrector.rs  mod.rs  yolo.rs
src-tauri/src/utils/: mod.rs  string.rs
src/api/: config.ts
src/app/: App.tsx
src/app/components/: AssetModelSelector.tsx  CustomTitlebar.tsx  KeyRecorder.tsx  KeySequence.tsx  MacroCard.tsx  ModelSelector.tsx  Sidebar.tsx  UpdaterDialog.tsx  VisionModelSelector.tsx
src/app/components/ui/: card.tsx  slider.tsx  switch.tsx
src/app/views/: AIView.tsx  GlobalSettingsView.tsx  KeyBindingsView.tsx  LogView.tsx  MacrosView.tsx  StratagemsView.tsx
src/locales/: en.json  zh.json
src/store/: aiStore.ts  configStore.ts  engineConfig.ts  engineStore.ts  stratagemsStore.ts
src/styles/: index.css
src/types/: ai.ts  config.ts  stratagems.ts
src/utils/: stratagems.ts
ui_templates/: README.md  index.html
ui_templates/src/app/components/: KeySequence.tsx  Sidebar.tsx  TitleBar.tsx
ui_templates/src/styles/: theme.css
