[package]
name = "hellcall-desktop"
version = "0.1.1"
description = "helldivers 2 voice macro tool"
authors = ["LyceumHewun <hewun@lyceum.cc>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hellcall_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.6"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-log = "2.8.0"
log = "0.4"
# hellcall (inlined) dependencies
anyhow = "1.0"
cpal = "0.16"
nnnoiseless = "0.5"
rand = "0.9"
rdev = { version = "0.5", features = ["serialize"] }
rodio = "0.21"
rubato = "0.14"
strsim = "0.11"
vosk = "0.3"
webrtc-vad = "0.4"
windows-capture = "1.5"
image = "0.24"
ort = { version = "2.0.0-rc.6", features = ["ndarray", "cuda"] }
ndarray = "0.17"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=y"]
